# sp_oncall

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README_NEW.md  langgraph.json  mcp_cfg.json  mcp_config.json  pyproject.toml  xrd_sandbox.json
.github/: copilot-instructions.md
architecture/: ARCHITECTURE.md  IMPLEMENTATION_PHASES.md  WORKSHOP_STRUCTURE.md
docs/: DEBUG_CAPTURE.md
plans/: check_bgp_neighbors.json  check_interface_status.json  check_mpls_state.json  general_device_health_check.json  review_p_device.json  review_pe_device.json  review_rr_device.json  troubleshoot_vpn_vrf.json
src/: assessor.py  configuration.py  executor.py  graph.py  input_validator.py  mcp_client.py  mcp_node.py
src/logging/: README.md  __init__.py
src/logging/configuration/: __init__.py  (+4 more)
src/nodes/: __init__.py  assessor.py  executor.py  input_validator.py  markdown_builder.py  planner.py  reporter.py
src/prompts/: __init__.py  device_extraction.py  investigation_planning.py  learning_insights.py  network_executor.py  objective_assessor.py  planner.py  report_generator.py
src/schemas/: __init__.py  assessment_schema.py  device_extraction_schema.py  learning_insights_schema.py  planner_schema.py  state.py
src/scripts/: show_logger_names.py
src/sp_oncall/: assessment_schema.py  assessor.py  configuration.py  executor.py  graph.py  input_validator.py  mcp_node.py  planner.py  planner_schema.py  prompts.py  reporter.py  state.py  tools.py  utils.py
src/util/: __init__.py  file_loader.py  llm.py  plans.py  utils.py
tests/data/: __init__.py  assessor_data.py  executor_data.py  input_validator_data.py  planner_data.py  reporter_data.py
tests/nodes/: __init__.py  test_assessor.py  test_executor.py  test_input_validator.py  test_markdown_builder.py  test_planner.py  test_reporter.py
(+55 files in other folders)
