[project]
name = "sp_oncall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.24",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.15",
    "langgraph>=0.4.1",
    "langgraph-prebuilt>=0.1.8",
    "ollama>=0.4.8",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "langchain-openai>=0.3.15",
    "langchain-tavily>=0.1.6",
    "langgraph-cli[inmem]>=0.2.8",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sp_oncall"]
[tool.setuptools.package-dir]
"sp_oncall" = "src/sp_oncall"
